@@ -782,7 +782,7 @@ typedef struct luks_tmp
 typedef struct chacha20
 {
   u32 iv[2];
-  u8  plain[64];
+  u32 plain[2];
   u32 plain_length;
   u32 position;
 
