@@ -1,1 +1,0 @@
-./hashcat -m 670 -a 0 chachaTest.hash chachaTest.dict -u1 -n1 --force --weak-hash-threshold=0 --potfile-disable
