@@ -912,8 +912,8 @@ typedef enum display_len
   DISPLAY_LEN_MAX_501   = 104,
   DISPLAY_LEN_MIN_600   = 8 + 128,
   DISPLAY_LEN_MAX_600   = 8 + 128,
-  DISPLAY_LEN_MIN_670   = 10 + 1 + 1 + 1 + 16 + 1 + 32 + 1 + 32,
-  DISPLAY_LEN_MAX_670   = 10 + 1 + 5 + 1 + 16 + 1 + 32 + 1 + 32,
+  DISPLAY_LEN_MIN_670   = 10 + 1 + 1 + 1 + 16 + 1 + 16 + 1 + 16,
+  DISPLAY_LEN_MAX_670   = 10 + 1 + 5 + 1 + 16 + 1 + 64 + 1 + 64,
   DISPLAY_LEN_MIN_900   = 32,
   DISPLAY_LEN_MAX_900   = 32,
   DISPLAY_LEN_MIN_910   = 32 + 1 + 0,
