@@ -5,6 +5,7 @@
 ##
 
 - Added hash-mode   600 = Blake2-512
+- Added hash-mode   670 = Chacha20
 - Added hash-mode 15200 = Blockchain, My Wallet, V2
 
 ##
